--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
+<% provide(:title,'Help') %>
+
+<!DOCTYPE html>
+<html>
 <h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+
+<p>If you have any problems please contact me at clarence.boey@gmail.com</p>
+</html>
