--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,7 @@
 <html>
     <h1>StaticPages#home</h1>
 
+<%= link_to "Sign up now!", '#' %>
     <p>Sample App Find me in app/views/static_pages/home.html.erb</p>
 </html>
 
