--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html>
-<h1>StaticPages#help</h1>
+<h1>Help</h1>
 
 <p>If you have any problems please contact me at clarence.boey@gmail.com</p>
 </html>
