--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-    <h1>StaticPages#home</h1>
+    <h1>Sample App</h1>
 
 <%= link_to "Sign up now!", '#' %>
     <p>Sample App Find me in app/views/static_pages/home.html.erb</p>
