--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 <body>
 
 <%= yield %>
+
+
+
 <%= link_to "About", about_path %>
+<%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
